<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.OnboardingActivity">

    <TextView
        android:id="@+id/title"
        style="@style/Signal.Text.Headline.Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/CreateProfileActivity_complete_your_profile"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/et_specialization"
        style="?attr/conversation_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/labeled_edit_text_background_inactive"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:hint="@string/profile_create_activity__your_specialization"
        android:inputType=""
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/et_qualifications"
        style="?attr/conversation_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/labeled_edit_text_background_inactive"
        android:hint="@string/profile_create_activity__your_qualifications"
        android:inputType="text"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="@+id/et_specialization"
        app:layout_constraintStart_toStartOf="@+id/et_specialization"
        app:layout_constraintTop_toBottomOf="@+id/et_specialization" />

    <EditText
        android:id="@+id/et_clinic_address"
        style="?attr/conversation_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/labeled_edit_text_background_inactive"
        android:hint="@string/profile_create_activity__your_clinic_address"
        android:inputType="text"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="@+id/et_qualifications"
        app:layout_constraintStart_toStartOf="@+id/et_qualifications"
        app:layout_constraintTop_toBottomOf="@+id/et_qualifications" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:hint="@string/profile_create_activity__your_medical_license"
        app:layout_constraintStart_toStartOf="@+id/et_clinic_address"
        app:layout_constraintTop_toBottomOf="@+id/et_clinic_address" />


    <ImageView
        android:id="@+id/avatar_background"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/circle_tintable"
        android:tint="@color/core_grey_05"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:cropToPadding="false"
        android:src="@drawable/ic_profile_camera"
        app:layout_constraintStart_toStartOf="@+id/avatar_background"
        app:layout_constraintTop_toTopOf="@+id/avatar_background" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/signal_primary"
        android:text="@string/profile_create_activity__finish"
        app:layout_constraintEnd_toEndOf="@+id/et_clinic_address"
        app:layout_constraintStart_toStartOf="@+id/avatar_background"
        app:layout_constraintTop_toBottomOf="@+id/camera_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>